# knowledge-search

./: .env.example  .gitignore  COMMERCIAL.md  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 8a1e5acc057d_initial_schema.py  8e06856bbcdf_add_doc_metadata_columns.py
backend/app/: config.py  logging_conf.py  main.py
backend/app/agent/: ask_loop.py
backend/app/api/: ask.py  docs.py  search.py
backend/app/db/: models.py  postgres.py
backend/app/docs/: ingest.py  loader.py  pipeline.py  search.py  splitter.py
backend/app/embeddings/: tei_client.py
backend/app/queue/: app.py  tasks.py
backend/app/repos/: docs.py
backend/tests/: conftest.py  test_ask_api.py  test_cors.py  test_docs_api.py  test_health.py  test_loader.py  test_pipeline.py  test_pipeline_idempotency.py  test_repo_search.py  test_router_registration.py  test_search_api.py  test_splitter.py  test_tei_client.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ask-stream.tsx  chat-panel.tsx  docs-sidebar.tsx  error-banner.tsx  pdf-preview.tsx  search-results.tsx  upload-dialog.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  tabs.tsx  textarea.tsx
frontend/lib/: api.ts  sse.ts  types.ts
