[project]
name = "knowledge-search"
version = "0.1.0"
description = "Document Q&A: PDF upload, embeddings into pgvector, search and LLM-synthesised answers with citations."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.29",
    "pgvector>=0.3.6",
    "alembic>=1.14",
    "httpx>=0.27",
    "pymupdf4llm>=0.0.17",
    "langchain-text-splitters>=0.3",
    "python-multipart>=0.0.12",
    "openai>=1.50",
    "procrastinate>=3.8.1",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "testcontainers[postgres]>=4.8",
    "respx>=0.21",
    "ruff>=0.7",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["backend/tests"]
addopts = "-m 'not postgres'"
markers = [
    "postgres: tests requiring a reachable Postgres (use `pytest -m postgres` to run)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI idioms: Depends, File, Query, Body, Path, Header, Cookie, Form
# all REQUIRE call-in-default. Whitelist them here so B008 doesn't fire.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Query",
    "fastapi.Body",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Cookie",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "backend.tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
check_untyped_defs = true
